# pythonweekend-ke

./: .gitignore  LICENSE  README.md  app.cfg  app.json  app.py  pyproject.toml  schema.yaml  tests.py
